# framelabs-s3-server

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  pr.yml
src/: aws_util.rs  main.rs  utils.rs
