[package]
name = "framelabs-s3-server"
version = "1.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[dependencies]
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "client-hyper",
    "rustls",
] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
axum = { version = "0.8", features = ["macros", "http2"] }
image = { version = "0.25" }
rand = "0.9"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
libheif-rs = { version = "2", features = ["embedded-libheif"] }
