[package]
name = "framelabs-s3-server"
version = "2.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.87"
[dependencies]
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "sigv4a",
] }
axum = { version = "0.8", features = ["macros", "http2"] }
cached = { version = "0.56", features = ["async"] }
image = { version = "0.25" }
rand = "0.9"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
imageproc = "0.26"
ab_glyph = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libheif-rs = { version = "2" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
libheif-rs = { version = "2", features = ["embedded-libheif"] }
